--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ ul li{
   </ul>
 
   <!-- 🔗 YOUR WHATSAPP GROUP -->
-  <a href=""
+  <a href="https://chat.whatsapp.com/HgEDW2hMzlMF2vW6YOYQpe?mode=gi_t"
      class="btn whatsapp">
      💬 Join WhatsApp Group
   </a>
