--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ ul li{
 
 <div class="container">
 
-  <div class="logo"> ❤️‍🩹 SPEEDY ID SELL OFFICAL </div>
+  <div class="logo">  SPEEDY HERE </div>
 
   <h2>Free Fire Selling Group</h2>
 
