--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@ ul li{
   <h2>Free Fire Selling Group</h2>
 
   <ul>
-    <li>💎 Diamonds</li>
-    <li>👕 Rare Bundles</li>
-    <li>🔫 Elite Pass</li>
+    <li>Scamers not allowed 🫡</li>
+    <li>Trustly give id pass in admins</li>
+    <li>Respect Admins  </li>
     <li>⚡ Fast & Trusted</li>
   </ul>
 
