--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ ul li{
 
   <div class="logo">  SPEEDY HERE </div>
 
-  <h2>Free Fire Selling Group</h2>
+  <h2>Speedy Selling Group</h2>
 
   <ul>
     <li>Scamers not allowed 🫡</li>
