--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ ul li{
 
 <div class="container">
 
-  <div class="logo">  SPEEDY HERE </div>
+  <div class="logo">  Hacker Sir </div>
 
   <h2>Speedy Selling Group</h2>
 
@@ -100,7 +100,7 @@ ul li{
   </a>
 
   <!-- 👑 OWNER WHATSAPP -->
-  <a href="https://wa.me/919436430316"
+  <a href="https://wa.me/917560933109"
      class="btn owner">
      👑 Contact Owner
   </a>
