--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ ul li{
 
   <div class="logo">  Hacker Sir </div>
 
-  <h2>Speedy Selling Group</h2>
+  <h2>Hacker Sir Selling Group</h2>
 
   <ul>
     <li>Scamers not allowed 🫡</li>
@@ -98,6 +98,10 @@ ul li{
      class="btn whatsapp">
      💬 Join WhatsApp Group
   </a>
+  <a href="https://chat.whatsapp.com/Ke5wxGHKqweBvEj8IWROoZ?mode=gi_t"
+     class="btn whatsapp">
+     💬 Join WhatsApp Group
+                          </a>
 
   <!-- 👑 OWNER WHATSAPP -->
   <a href="https://wa.me/917560933109"
